Fixed results list alignment
Result list now aligns to left or start of the container
Looks more appealing this way

--- a/static/style.css
+++ b/static/style.css
@@ -102,6 +102,7 @@ button:hover {
     display: flex;
     flex-wrap: wrap;  /* Allows wrapping of items */
     justify-content: left;
+    align-content: start;
     gap: 10px;  /* Space between items */
     padding: 10px;
 }
